<resources>
    <string name="dcc_app_name">BitExpress</string>
    <string name="loading">loading…</string>
    <string name="title_verify_sms_code">验证短信验证码</string>
    <string name="title_liveness_detection">人脸识别</string>
    <string name="on_chain_dcc">\@Distributed Credit Chain</string>
    <string name="on_chain_ethereum">\@Ethereum</string>
    <string name="dcc">DCC</string>
    <string name="time_format_yyyymmdd_hhmm">%1$tY-%1$tm-%1$td  %1$tH:%1$tM</string>
    <string name="time_format_yyyymmdd">%1$tY-%1$tm-%1$td</string>
    <string name="period_format_yyyymmdd_dot">%1$tY.%1$tm.%1$td-%2$tY.%2$tm.%2$td</string>
    <string name="time_format_yyyymmdd_hhmmss">%1$tY-%1$tm-%1$td  %1$tH:%1$tM:%1$tS</string>
    <string name="empty_slash">--</string>
    <string name="status_pending">待上链</string>
    <string name="gwei">Gwei</string>
    <string name="ftc_transfer_fee_hint">FTC转账手续费%1$s‰</string>
    <string name="receive_amount_colon">接收金额:</string>
    <string name="sms_code">短信验证码</string>
    <string name="send_sms_code">发送验证码</string>
    <string name="export_private_key_description">当前二维码显示的是私钥明文,私钥明文是您对钱包所有权的认证方式.通过导入私钥可以再任何设备使用钱包,并创建钱包对应的KeyStore文件和钱包密码.强烈建议您在使用钱包前做好备份.</string>
    <string name="ca_not_enabled">您当前使用的统一登录秘钥与链上不一致,将影响部分功能的正常使用</string>
    <string name="bitexpress">BitExpress</string>
    <string name="submit_new_token_title">如何提交新token给BitExpress?</string>
    <string name="token_submit_info_general">如果需要在钱包显示你的Token信息，请务必使用官方邮箱提供一下信息，发送至yimtoken1@163.com我们会有专人处理。</string>
    <string name="common_service_error_toast">系统繁忙,请稍后重试</string>
    <string name="bitexpress_info_mail_address">yimtoken1@163.com</string>
    <string name="coming_soon">Coming soon</string>
    <string name="affiliate_description">总共可邀请5位好友加入BitEXPRESS，\n每邀请一位好友注册并实名后，\n您将获得额外奖励</string>
    <string name="confirm_repayment">确认还币</string>
    <string name="scan_the_qr">扫描二维码可获得还币地址</string>
    <string name="loan_submit_fee_colon">借款申请手续费:</string>
    <string name="repayment_date_colon">还币日期:</string>
    <string name="please_select">请选择</string>
    <string name="sms_code1">请输入短信验证码</string>
    <string name="press_the_camera">请点击上方按钮拍照识别 例:20180101\-20380101</string>
    <string name="please_make_sure_that_the_information">请仔细核对一下信息是否与证件上的一致,若发现识别有误,请手动修改,通过认证后,无法修改信息.</string>
    <string name="extra">备\u3000\u3000注:</string>
    <string name="remarks">备注</string>
    <string name="transfer_amount">转账金额</string>
    <string name="transaction_record_detail">交易记录详情</string>
    <string name="no_more">没有更多了</string>
    <string name="load_more">加载更多</string>
    <string name="no_transaction_record_yet">未查询到该币种交易记录</string>
    <string name="communication_log_submit_hint">温馨提示\n\n1、请使用本人实名制手机号进行认证\n2、服务密码是登录运营商（移动、联通、电信）营业厅的密码\n3、点击“提交”按钮会收到运营商的通知短信，无需回复\n4、如忘记服务密码,请登录运营商官网找回服务密码</string>
    <string name="please_input_phone_num">请输入手机号</string>
    <string name="bank_registered_phone_num">银行预留手机号</string>
    <string name="please_input_bank_card_no">请输入银行卡号</string>
    <string name="bank_card_no">银行卡号</string>
    <string name="custom_gas_limit">自定义Gas Limit</string>
    <string name="custom_gas_price">自定义Gas Price</string>
    <string name="max_tx_fee_colon">最高矿工费:</string>
    <string name="already_selected">已添加</string>
    <string name="transfer_fee_colon">手续费:</string>
    <string name="cert_fee">认证费</string>
    <string name="do_certification">认证</string>
    <string name="issuer_bank">发卡行</string>
    <string name="card_no">卡号</string>
    <string name="phone_num">手机号</string>
    <string name="phone_owner_name">机主姓名</string>
    <string name="phone_no">手机号码</string>
    <string name="please_input_phone_no">请输入手机号码</string>
    <string name="phone_service_password">服务密码</string>
    <string name="please_input_phone_service_password">请输入服务密码</string>
    <string name="import_succeed">导入成功</string>
    <string name="loan_amount_colon">借币金额:</string>
    <string name="repayment_total_amount_colon">应还总额:</string>
    <string name="repayment_principal_amount_colon">应还本金:</string>
    <string name="repayment_interest_amount_colon">应还利息:</string>
    <string name="holding_amount_colon">持有量:</string>
    <string name="receive_address_colon">收币地址:</string>
    <string name="max_payment_amount_colon">最高支付金额: %1$s</string>
    <string name="holding_balance_colon">持有量:</string>
    <string name="max_tx_fee">最高矿工费</string>
    <string name="transfer_amount_colon">订单金额:</string>
    <string name="transaction_detail">支付详情</string>
    <string name="ok3">我知道了</string>
    <string name="keystore_or_wallet_password">KeyStore信息或钱包密码错误</string>
    <string name="importing_failure">导入失败</string>
    <string name="warning_backup_wallet">请优先备份钱包到其他设备，以免客户端删除、密钥丢失等造成资产损失。</string>
    <string name="hint_enable_local_protect">为了您的钱包安全，建议您先开启本地安全保护</string>
    <string name="creating_successful">创建成功</string>
    <string name="set_local_security">开启本地安全保护</string>
    <string name="code_for_more_reward">输入邀请码可以获得更多奖励</string>
    <string name="confirm">确定</string>
    <string name="WeXCreatePassportViewController_description3">成功创建数字钱包后,请即时在我的->备份钱包 中进行备份,以防数字资产丢失</string>
    <string name="wallet_password_guide">不少于8位字符，字母数字特殊符号至少2种混合</string>
    <string name="please_paste_keystore">请粘贴KEYSTORE信息</string>
    <string name="please_set_passport_password">设置数字钱包密码</string>
    <string name="please_input_passport_password">验证数字钱包密码</string>
    <string name="verification">去实名</string>
    <string name="the_chain_of_dcc">\@DCC业务链\n DCC业务链上的token只能在DCC业务链钱包地址间进行互转，DCC业务链的钱包和以太坊的钱包是通用的，您以太坊的钱包地址同时也是DCC业务链的钱包地址。如您需要将DCC业务链上的token转移到以太坊主链上，请使用跨链转移功能。</string>
    <string name="transaction_status_colon">交易状态:</string>
    <string name="to_address_colon">接收地址:</string>
    <string name="from_address_colon">付款地址:</string>
    <string name="transaction_fee_colon">矿\u2002工\u2002费:</string>
    <string name="transaction_id_colon">交\u2002易\u2002号:</string>
    <string name="block_number_colon">区块高度:</string>
    <string name="transaction_time_colon">交易时间:</string>
    <string name="address_book">地址簿</string>
    <string name="keystore_information">KEYSTORE信息</string>
    <string name="local_security_is_disabled_successfully">关闭安全保护成功,您可以开启其他安全保护方式</string>
    <string name="private_key_statement2">私钥明文</string>
    <string name="search">搜索</string>
    <string name="transfer">转账</string>
    <string name="collect">收款</string>
    <string name="transactions_record">交易记录</string>
    <string name="market_quote">市场价格</string>
    <string name="quote_not_available">未能查询到该币种市场价格</string>
    <string name="password_length_invalid">密码长度应在8至20位之间</string>
    <string name="please_enterinput">请输入地址簿名称</string>
    <string name="receiver_address">收款人钱包地址</string>
    <string name="attentiontip">温馨提示:</string>
    <string name="tips">提示</string>
    <string name="data_unavailable">暂无数据</string>
    <string name="scan_or_enterinput">扫码或输入钱包地址</string>
    <string name="address_book_informration">地址薄信息与钱包地址绑定，删除钱包地址或删除app将导致本地保存的地址薄信息丢失。请知悉！</string>
    <string name="description_remove_passport">如果您还没有对钱包进行过备份，删除钱包可能会导致您的数字资产永远无法找回，请您自行检查钱包备份。</string>
    <string name="remove_passport_description">删除钱包后，您只能通过导入钱包恢复当前钱包的使用。如果您未备份钱包，则无法继续使用当前钱包，如果未开启云存储功能，本地数据不会自动恢复。强烈建议您在删除钱包之前备份钱包，将数据备份到云。</string>
    <string name="title_remove_passport">删除钱包</string>
    <string name="back_up_wallet">备份钱包</string>
    <string name="please_input_current_passport_password">原钱包密码:</string>
    <string name="please_input_new_passport_password">新钱包密码:</string>
    <string name="export_keystore_description">二维码显示的是KeyStore信息,KEYSTORE是私钥的签名保护文件,通过钱包密码对KEYSTORE文件签名.单独拥有KEYSTORE文件或者钱包密码都无法使用钱包.而同时拥有KEYSTORE文件和钱包密码则可以再任何设备使用钱包.强烈建议您在使用钱包前做好备份</string>
    <string name="confirm2">确认</string>
    <string name="loan_contract">借币合同</string>
    <string name="try_again">重新申请</string>
    <string name="loan_time_colon">借币期限:</string>
    <string name="beneficiary_address_colon">收币地址:</string>
    <string name="repay_interest_colon">应还利息:</string>
    <string name="hint_search_token">搜索Token名称、简写或合约地址</string>
    <string name="incentive_program_0">激励计划\nBitExpress是基于信用的数字货币借贷APP，为了鼓励用户建立自己区块链的信用记录，保障良好的借贷行为获得更多的借贷便利，发生在DCC公链上借贷交易均会参与激励计划，获得各种奖励。</string>
    <string name="incentive_program_1">数据激励\nBitExpress上线初期所有提供的数据验证均不收取费用，并且用户提交数据认证即可获得对应的DCC奖励。</string>
    <string name="incentive_program_2">传播激励\nBitExpress对推荐朋友使用app进行数字资产借贷的用户进行激励，您推荐的好友如果借贷申请成功，借贷服务费的50%将返还给您。</string>
    <string name="incentive_program_3">贡献奖励（挖矿奖励）\nBitExpress中用户的行为都会产生不同的贡献值，贡献值会进行累计，每3小时用户可以在糖果领取的功能中进行糖果领取，获得和BitExpress合作的机构投放的各种Token奖励。</string>
    <string name="incentive_program_4">生态奖励\nBitExpress的底层信用网络构建在Distributed Credit Chain上，因此根据DCC的生态激励规则，BitExpress的用户行为可以获得DCC自动发放的生态奖励。具体的方法规则，请关注DCC网站http://dcc.finance公布的各类策略。</string>
    <string name="collect_candies">糖果领取</string>
    <string name="produce_interest">币生息</string>
    <string name="my_credit">我的信用</string>
    <string name="based_loan">信用借币</string>
    <string name="more">更多</string>
    <string name="digital_assets">数字资产</string>
    <string name="status_enabled">状态</string>
    <string name="status_disabled">状态</string>
    <string name="oauth_login_history">统一登录记录</string>
    <string name="no_more_records">没有更多记录了</string>
    <string name="disable_passport_login">禁用统一登录</string>
    <string name="enable_passport_login">启用统一登录</string>
    <string name="update_key">更新密钥</string>
    <string name="bitexpress_member">Hi,BitEXPRESS会员</string>
    <string name="default_nickname">BitExpress会员</string>
    <string name="candy_release_notice">&#x3000;&#x3000;神秘花园和知识问答PK即将上线。届时您可以通过知识问答PK获得阳光（可看做挖矿值），并根据阳光值的多少领取神秘花园的奖励。您还可以去其他小伙伴的神秘花园收取奖励哦~~</string>
    <string name="mining_rewardss">挖矿奖励</string>
    <string name="mining_contribution">挖矿贡献值 </string>
    <string name="mine_faster">加速挖矿</string>
    <string name="details">查看 >></string>
    <string name="rewardss_available">可领取奖励</string>
    <string name="rules">活动规则</string>
    <string name="rules1"><font color="#C009FF">活动规则</font></string>
    <string name="basic_rewards">基础奖励</string>
    <string name="loan_application_rewards">借币奖励</string>
    <string name="repayment_rewards">还币奖励</string>
    <string name="id_verification">实名认证</string>
    <string name="bank_account_verification">银行卡认证</string>
    <string name="carrier_verification">运营商认证</string>
    <string name="mining_contribution_details">贡献值详情</string>
    <string name="reward_details">奖励详情</string>
    <string name="eco_rewardsds">生态奖励</string>
    <string name="invitation_history">邀请记录</string>
    <string name="invite_friends">邀请好友</string>
    <string name="repayment_plan">还款计划</string>
    <string name="loan_details">借币详情</string>
    <string name="loan_report">借贷报告</string>
    <string name="incentive_program">激励计划</string>
    <string name="required_information">所需资料</string>
    <string name="confirmation_of_repayment">还币信息确认</string>
    <string name="select_address">选择地址</string>
    <string name="repayment">还币</string>
    <string name="name_label">姓名</string>
    <string name="id_no_label">身份证号</string>
    <string name="authenticator">认证方：云金融</string>
    <string name="fill_info_warning">随意填写会对您的信用审核造成负面影响</string>
    <string name="provide_photos_of_both_sides">请拍摄身份证照片，系统自动识别：</string>
    <string name="please_try_ocr">请点击上方按钮拍照识别</string>
    <string name="gender">性别</string>
    <string name="ethnicity">民族</string>
    <string name="address">住址</string>
    <string name="issuer">签发机构</string>
    <string name="expires_on">有效期限</string>
    <string name="next">下一步</string>
    <string name="next_step">继续借币</string>
    <string name="payment_unopen_text">你最方便的收钱工具</string>
    <string name="payment_unopen_text1">支持主流币种</string>
    <string name="payment_unopen_text2">自定义收款标题和金额</string>
    <string name="payment_unopen_text3">付款人可填写备注</string>
    <string name="payment_unopen_text4">可设置到期时间</string>
    <string name="payment_unopen_text5">立即使用</string>
</resources>