<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="passport"
            type="io.wexchain.android.dcc.domain.Passport" />

        <variable
            name="tx"
            type="io.wexchain.android.dcc.vm.TransactionVm" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.wexmarket.android.passport.CreateTransactionActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/include_toolbar" />

        <TextView
            android:id="@+id/transaction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_padding_horizontal"
            android:text="@{tx.txTitle}"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:text="ETH 转账" />

        <EditText
            android:id="@+id/et_input_address"
            style="@style/Widget.AppCompat.EditText.Input"
            android:layout_width="match_parent"
            android:digits="xX0123456789abcdefABCDEF"
            android:hint="@string/receiver_address"
            android:inputType="text"
            android:paddingRight="40dp"
            android:text="@={tx.toAddress}"
            app:layout_constraintTop_toBottomOf="@id/transaction_title" />

        <ImageButton
            android:id="@+id/ib_scan_address"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_scan"
            app:layout_constraintBottom_toBottomOf="@id/et_input_address"
            app:layout_constraintRight_toRightOf="@id/et_input_address"
            app:layout_constraintTop_toTopOf="@id/et_input_address" />

        <EditText
            android:id="@+id/et_input_amount"
            style="@style/Widget.AppCompat.EditText.Input"
            android:hint="@string/transfer_amount"
            android:inputType="numberDecimal"
            android:text="@={tx.amount}"
            app:layout_constraintTop_toBottomOf="@id/et_input_address" />

        <!--todo remarks is hidden-->
        <EditText
            android:id="@+id/et_input_remarks"
            style="@style/Widget.AppCompat.EditText.Input"
            android:hint="@string/remarks"
            android:text="@={tx.remarks}"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/et_input_amount" />

        <EditText
            android:id="@+id/et_input_gas_price"
            style="@style/Widget.AppCompat.EditText.Input"
            visibleOrGone="@{!tx.onPrivateChain}"
            android:hint="@string/custom_gas_price"
            android:inputType="numberDecimal"
            android:paddingRight="60dp"
            android:text="@={tx.gasPrice}"
            app:layout_constraintTop_toBottomOf="@id/et_input_remarks" />

        <TextView
            visibleOrGone="@{!tx.onPrivateChain}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/content_padding_horizontal"
            android:text="@string/gwei"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBaseline_toBaselineOf="@id/et_input_gas_price"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/et_input_gas_limit"
            style="@style/Widget.AppCompat.EditText.Input"
            visibleOrGone="@{!tx.onPrivateChain}"
            android:layout_height="32dp"
            android:hint="@string/custom_gas_limit"
            android:inputType="number"
            android:onFocusChange="@{(v,f)->tx.updateGasLimit(f)}"
            android:text="@={tx.gasLimit}"
            app:layout_constraintTop_toBottomOf="@id/et_input_gas_price" />

        <TextView
            android:id="@+id/et_transaction_fee"
            style="@style/Widget.AppCompat.EditText.Input"
            visibleOrGone="@{!tx.onPrivateChain}"
            android:hint="@string/max_tx_fee"
            app:layout_constraintTop_toBottomOf="@id/et_input_gas_limit" />

        <TextView
            visibleOrGone="@{!tx.onPrivateChain}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={tx.maxTransactionFeeText}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/et_transaction_fee"
            app:layout_constraintRight_toRightOf="@id/et_transaction_fee"
            tools:text="0.1234ETH" />

        <TextView
            visibleOrGone="@{tx.onPrivateChain}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_padding_horizontal"
            android:layout_marginTop="8dp"
            android:text="@{tx.transferFeeHintText}"
            android:textColor="@color/text_red"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_transaction_fee"
            tools:text="@string/ftc_transfer_fee_hint" />

        <Button
            style="@style/Widget.AppCompat.Button.Dcc.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:enabled="@{!tx.busyChecking}"
            android:minWidth="160dp"
            android:onClick="@{(v)->tx.checkAndProceed(passport.address)}"
            android:text="@string/next_step"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>
