<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="io.wexchain.android.dcc.modules.paymentcode.PaymentUnOpenActivity">

    <include layout="@layout/include_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_trust_unopen_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"
                android:text="@string/payment_unopen_text"
                android:textColor="#FFFA4A82"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_payment_text_tip"
                    android:drawablePadding="15dp"
                    android:text="@string/payment_unopen_text1"
                    android:textColor="#FF4A4A4A"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/icon_payment_text_tip"
                    android:drawablePadding="15dp"
                    android:text="@string/payment_unopen_text2"
                    android:textColor="#FF4A4A4A"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/icon_payment_text_tip"
                    android:drawablePadding="15dp"
                    android:text="@string/payment_unopen_text3"
                    android:textColor="#FF4A4A4A"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/icon_payment_text_tip"
                    android:drawablePadding="15dp"
                    android:text="@string/payment_unopen_text4"
                    android:textColor="#FF4A4A4A"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_payment_unopen_use"
            android:gravity="center"
            android:text="@string/payment_unopen_text5"
            android:textColor="@color/white"
            android:textSize="15sp"/>

    </RelativeLayout>

</LinearLayout>
