<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >

    <data>

        <variable
                name="vm"
                type="io.wexchain.android.dcc.vm.EditIdCardInfoVm"
                />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/content_padding_horizontal"
                android:paddingRight="@dimen/content_padding_horizontal"
                android:paddingBottom="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:descendantFocusability="beforeDescendants"
                >

            <TextView
                    style="@style/NoticeTextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fill_info_warning"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authenticator"
                    android:textColor="@color/text_blue_magenta"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/provide_photos_of_both_sides"
                    />

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                <ImageButton
                        android:id="@+id/ib_id_front"
                        android:layout_width="0dp"
                        android:layout_height="105dp"
                        android:scaleType="centerInside"
                        imageRawBytes="@{vm.imgFront}"
                        errorRes="@{@drawable/cn_id_front}"
                        tools:src="@drawable/cn_id_front"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/ib_id_back"
                        />


                <ImageButton
                        android:id="@+id/ib_id_back"
                        android:layout_width="0dp"
                        android:layout_height="105dp"
                        android:scaleType="centerInside"
                        imageRawBytes="@{vm.imgBack}"
                        errorRes="@{@drawable/cn_id_back}"
                        tools:src="@drawable/cn_id_back"
                        app:layout_constraintLeft_toRightOf="@id/ib_id_front"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginLeft="24dp"
                        />

            </android.support.constraint.ConstraintLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.DccTitle"
                    android:text="@string/name_label"
                    android:layout_marginTop="4dp"
                    />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@={vm.name}"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/please_try_ocr"
                    android:textSize="@dimen/text_size_sub_title"
                    />

            <View
                    style="@style/DividerHorizontal"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.DccTitle"
                    android:text="@string/gender"
                    android:layout_marginTop="4dp"
                    />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@={vm.sex}"
                    android:maxLength="1"
                    android:singleLine="true"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/please_try_ocr"
                    android:textSize="@dimen/text_size_sub_title"
                    />

            <View
                    style="@style/DividerHorizontal"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.DccTitle"
                    android:layout_marginTop="4dp"
                    android:text="@string/ethnicity"
                    />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@={vm.race}"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/please_try_ocr"
                    android:textSize="@dimen/text_size_sub_title"
                    />

            <View
                    style="@style/DividerHorizontal"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.DccTitle"
                    android:layout_marginTop="4dp"
                    android:text="@string/id_no_label"
                    />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@={vm.idNo}"
                    android:maxLength="18"
                    android:digits="0123456789xX"
                    android:inputType="text"
                    android:singleLine="true"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/please_try_ocr"
                    android:textSize="@dimen/text_size_sub_title"
                    />

            <View
                    style="@style/DividerHorizontal"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.DccTitle"
                    android:layout_marginTop="4dp"
                    android:text="@string/address"
                    />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@={vm.address}"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/please_try_ocr"
                    android:textSize="@dimen/text_size_sub_title"
                    />

            <View
                    style="@style/DividerHorizontal"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.DccTitle"
                    android:layout_marginTop="4dp"
                    android:text="@string/issuer"
                    />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@={vm.authority}"
                    android:maxLength="20"
                    android:inputType="text"
                    android:singleLine="true"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/please_try_ocr"
                    android:textSize="@dimen/text_size_sub_title"
                    />

            <View
                    style="@style/DividerHorizontal"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.DccTitle"
                    android:layout_marginTop="4dp"
                    android:text="@string/expires_on"
                    />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@={vm.timeLimit}"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/press_the_camera"
                    android:textSize="@dimen/text_size_sub_title"
                    />

            <View
                    style="@style/DividerHorizontal"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/please_make_sure_that_the_information"
                    android:textAppearance="@style/TextAppearance.AppCompat.DccSupplementary"
                    />

            <Button
                    style="@style/Widget.AppCompat.Button.Dcc.Full"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{(v)->vm.confirmToNext()}"
                    android:text="@string/next"
                    />
        </LinearLayout>
    </ScrollView>

</layout>
